# graphics_codex

./: .editorconfig  .gitignore
cubes/: ice-stats.csv  log.txt  main.vcxproj
cubes/.ice-tmp/cubes/: .icompile-cache  filelist.txt
cubes/cubes.xcodeproj/: project.pbxproj
cubes/cubes.xcodeproj/project.xcworkspace/xcuserdata/cemil.xcuserdatad/: UserInterfaceState.xcuserstate
cubes/cubes.xcodeproj/xcuserdata/cemil.xcuserdatad/xcschemes/: xcschememanagement.plist
cubes/cubes/cubes.xcodeproj/: project.pbxproj
cubes/cubes/cubes.xcodeproj/project.xcworkspace/xcuserdata/cemil.xcuserdatad/: UserInterfaceState.xcuserstate
cubes/cubes/cubes.xcodeproj/xcshareddata/xcschemes/: cubes.xcscheme  cubes_cmd.xcscheme  run.xcscheme
cubes/cubes/cubes.xcodeproj/xcuserdata/cemil.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cubes/cubes/cubes.xcodeproj/xcuserdata/cemil.xcuserdatad/xcschemes/: xcschememanagement.plist
cubes/data-files/: cornell.Scene.Any  final.Scene.Any  log.txt  parameters.Any  rotatedCube.Scene.Any  staircase.Scene.Any  test.Scene.Any  testCube.Scene.Any  whiteCube.Scene.Any
cubes/data-files/data-files/model/: cylinder.off
cubes/doc-files/: report.md.html
cubes/journal/: journal.md.html
cubes/source/: App.cpp  App.h
meshes/: .editorconfig  ice-stats.csv  main.vcxproj  main.vcxproj.filters  meshes.sln
meshes/.ice-tmp/meshes/: .icompile-cache  filelist.txt
meshes/data-files/: cylinder.Scene.Any
meshes/data-files/data-files/model/: cylinder.off
meshes/data-files/model/: cube.off  cylinder.off
meshes/doc-files/: report.md.html
meshes/journal/: journal.md.html
meshes/meshes/meshes.xcodeproj/: project.pbxproj
meshes/meshes/meshes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
meshes/meshes/meshes.xcodeproj/project.xcworkspace/xcuserdata/cemil.xcuserdatad/: UserInterfaceState.xcuserstate
meshes/meshes/meshes.xcodeproj/xcshareddata/xcschemes/: cubes.xcscheme  cubes_cmd.xcscheme
meshes/meshes/meshes.xcodeproj/xcuserdata/cemil.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
meshes/source/: App.cpp  App.h  IndexedTriangleList.h
rays/: .ycm_extra_conf.py  CMakeLists.txt
rays/.ice-tmp/cubes/: .icompile-cache  filelist.txt
rays/source/: App.cpp  App.h
